--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
 ext{
     //dependencies
     supportLibraryVersion = '26.0.0-beta2'
+    espressoVersion = '2.2.2'
 }
 
 task clean(type: Delete) {
