--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@ jdk: oraclejdk8
 
 android:
   components:
+    - tools
+    - platform-tools
+    - tools
     - build-tools-26.0.0
-    - android-22
     - android-26
+    - android-22
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+    - extra-android-support
     - sys-img-armeabi-v7a-android-22
 
 before_script:
